[package]
authors = ["Yuri Iozzelli <y.iozzelli@gmail.com>"]
name = "relexer-derive"
description = "A simple lexer powered by custom derive. Macro implementation crate"
license = "MIT"
version = "0.1.0"

[dependencies]
quote = "0.3.15"
regex = "0.2.3"
syn = "0.11.11"
synstructure = "0.6.1"

[lib]
proc-macro = true
